# gd_price_generator

./: .gitignore  gd_price_generator.py  pyproject.toml  requirements.txt  sku.txt
app/: app.py  price_generator.py
app/service/: print_config.py
app/settings/: base.py  base_settings.py  config.py  logger.py
config/: app_config.yaml  logger_config.yaml
sh/: call_generate_price.sh  call_generate_price_from_php.sh  get_price.sh  get_sitemap.sh  install_requirements.sh  make_db_backup.sh  make_full_backup.sh  make_full_backup.sh.save  mkdirs.sh  remove_old_files.sh  upd_main_price.sh  upd_opt_price.sh  upd_sitemap.sh  update.sh  warm_up_cache.sh
src/: .gitignore  .settings.swp  main.py  settings.py
